# frame-artisan

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
installer/: Cargo.toml
installer/src/: downloader.rs  install_steps.rs  logger.rs  main.rs  platform.rs  ui.rs
scripts/: test_graph_vram.py
src/frameartisan/: __main__.py
src/frameartisan/app/: app.py  base_dialog.py  component_registry.py  directories.py  frameartisan_application.py  logging_conf.py  main_window.py  model_manager.py  modules.py  preferences.py  snackbar.py
src/frameartisan/buttons/: brush_erase_button.py  expand_contract_button.py  eyedropper_button.py  generate_button.py  linked_button.py  remove_button.py  vertical_button.py
src/frameartisan/configuration/: initial_setup_dialog.py  model_download_dialog.py  model_download_thread.py
src/frameartisan/layouts/: flow_layout.py
src/frameartisan/modules/: base_module.py
src/frameartisan/modules/generation/: component_compatibility.py  constants.py  generation_module.py  generation_settings.py
src/frameartisan/modules/generation/data_objects/: lora_data_object.py
src/frameartisan/modules/generation/dialogs/: model_items_view.py
src/frameartisan/modules/generation/graph/: frameartisan_node_graph.py  new_graph.py  node_error.py
src/frameartisan/modules/generation/image/: image_editor.py  image_editor_layer.py  image_widget.py  layer_manager.py  layer_manager_widget.py  (+1 more)
src/frameartisan/theme/: stylesheet.qss
src/frameartisan/utils/: json_utils.py  model_utils.py
tests/: conftest.py  test_advanced_guidance.py  test_advanced_guidance_heavy.py  test_audio_encode.py  test_clear_graph.py  test_clear_vram.py  test_compile_cache.py  test_concat_mode.py  test_condition_encode.py  test_condition_encode_video.py  test_denoise_conditioning.py  test_drop_restore.py  test_ff_chunking.py  test_ff_chunking_vram.py  test_ff_chunking_vram_savings.py  test_generation_panel.py  test_generation_settings.py  test_graph.py  test_heavy_gpu.py  test_i2v_stages.py  test_keyframe_conditioning.py  test_lora.py  test_lora_mask.py  test_lora_preview.py  test_ltx2_integration.py  test_ltx2_nodes.py  test_model_manager.py  test_persist_source_paths.py  test_second_pass_latents_dims.py  test_second_pass_model_node.py  test_second_pass_stages.py  test_sequential_group_offload.py  test_sequential_group_offload_heavy.py  test_source_restoration.py  test_streaming_decode.py  test_t2v_stages.py  test_two_stage_streaming_heavy.py  test_use_components_hook_restore.py  test_video_audio_conditioning.py  test_video_load.py
(+57 files in other folders)
